[gd_scene load_steps=63 format=3 uid="uid://m483go0o00hr"]

[ext_resource type="Script" uid="uid://bfgrjslnj0vy1" path="res://scripts/main_menu.gd" id="1_bqqt6"]
[ext_resource type="Script" uid="uid://cojei05mb0var" path="res://scripts/bgmenu.gd" id="2_wu84c"]
[ext_resource type="Texture2D" uid="uid://db3xl5mcqf6xi" path="res://main menu assets/backgrounddd.png" id="3_8ln24"]
[ext_resource type="Texture2D" uid="uid://ese6gti60cbp" path="res://main menu assets/1.png" id="4_oa1go"]
[ext_resource type="Texture2D" uid="uid://co6bcjyneuy1" path="res://main menu assets/hover1.png" id="5_flqon"]
[ext_resource type="Texture2D" uid="uid://ofthk2sg107y" path="res://main menu assets/2.png" id="5_tbmy8"]
[ext_resource type="Texture2D" uid="uid://bgkrc38s48msu" path="res://main menu assets/3.png" id="6_jk1qb"]
[ext_resource type="Texture2D" uid="uid://bxtibqtlmngmq" path="res://main menu assets/4.png" id="7_5dd4i"]
[ext_resource type="Texture2D" uid="uid://dfwyh8t688j3n" path="res://main menu assets/hover2.png" id="7_rcqid"]
[ext_resource type="Texture2D" uid="uid://2678qf2vvtwm" path="res://main menu assets/5.png" id="8_tbmy8"]
[ext_resource type="Texture2D" uid="uid://ca63whtdcphoc" path="res://main menu assets/hover3.png" id="9_1ajci"]
[ext_resource type="Texture2D" uid="uid://ba4058kyxf268" path="res://main menu assets/hover4.png" id="11_7b55j"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bqqt6"]
atlas = ExtResource("3_8ln24")
region = Rect2(0, 0, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_wu84c"]
atlas = ExtResource("3_8ln24")
region = Rect2(192, 0, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ln24"]
atlas = ExtResource("3_8ln24")
region = Rect2(384, 0, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_rtw2f"]
atlas = ExtResource("3_8ln24")
region = Rect2(576, 0, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_oa1go"]
atlas = ExtResource("3_8ln24")
region = Rect2(768, 0, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbmy8"]
atlas = ExtResource("3_8ln24")
region = Rect2(960, 0, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_jk1qb"]
atlas = ExtResource("3_8ln24")
region = Rect2(1152, 0, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dd4i"]
atlas = ExtResource("3_8ln24")
region = Rect2(0, 108, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgwnu"]
atlas = ExtResource("3_8ln24")
region = Rect2(192, 108, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_flqon"]
atlas = ExtResource("3_8ln24")
region = Rect2(384, 108, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcqid"]
atlas = ExtResource("3_8ln24")
region = Rect2(576, 108, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ajci"]
atlas = ExtResource("3_8ln24")
region = Rect2(768, 108, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_7b55j"]
atlas = ExtResource("3_8ln24")
region = Rect2(960, 108, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pajh"]
atlas = ExtResource("3_8ln24")
region = Rect2(1152, 108, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7ex8"]
atlas = ExtResource("3_8ln24")
region = Rect2(0, 216, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8gd2"]
atlas = ExtResource("3_8ln24")
region = Rect2(192, 216, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_hstxw"]
atlas = ExtResource("3_8ln24")
region = Rect2(384, 216, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_8egab"]
atlas = ExtResource("3_8ln24")
region = Rect2(576, 216, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_gw5y6"]
atlas = ExtResource("3_8ln24")
region = Rect2(768, 216, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_svtp6"]
atlas = ExtResource("3_8ln24")
region = Rect2(960, 216, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dfpl"]
atlas = ExtResource("3_8ln24")
region = Rect2(1152, 216, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_qywvv"]
atlas = ExtResource("3_8ln24")
region = Rect2(0, 324, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wgol"]
atlas = ExtResource("3_8ln24")
region = Rect2(192, 324, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_1acrt"]
atlas = ExtResource("3_8ln24")
region = Rect2(384, 324, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_vr8o3"]
atlas = ExtResource("3_8ln24")
region = Rect2(576, 324, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_1a85y"]
atlas = ExtResource("3_8ln24")
region = Rect2(768, 324, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_hl5e0"]
atlas = ExtResource("3_8ln24")
region = Rect2(960, 324, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_engjn"]
atlas = ExtResource("3_8ln24")
region = Rect2(1152, 324, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_6h3lr"]
atlas = ExtResource("3_8ln24")
region = Rect2(0, 432, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_dj67d"]
atlas = ExtResource("3_8ln24")
region = Rect2(192, 432, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vcge"]
atlas = ExtResource("3_8ln24")
region = Rect2(384, 432, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_ip0br"]
atlas = ExtResource("3_8ln24")
region = Rect2(576, 432, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_xyero"]
atlas = ExtResource("3_8ln24")
region = Rect2(768, 432, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcusk"]
atlas = ExtResource("3_8ln24")
region = Rect2(960, 432, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_4puye"]
atlas = ExtResource("3_8ln24")
region = Rect2(1152, 432, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_q13xq"]
atlas = ExtResource("3_8ln24")
region = Rect2(0, 540, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_u43bj"]
atlas = ExtResource("3_8ln24")
region = Rect2(192, 540, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvjdd"]
atlas = ExtResource("3_8ln24")
region = Rect2(384, 540, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxnar"]
atlas = ExtResource("3_8ln24")
region = Rect2(576, 540, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_eku7s"]
atlas = ExtResource("3_8ln24")
region = Rect2(768, 540, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6nra"]
atlas = ExtResource("3_8ln24")
region = Rect2(960, 540, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_qw82i"]
atlas = ExtResource("3_8ln24")
region = Rect2(1152, 540, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_1468l"]
atlas = ExtResource("3_8ln24")
region = Rect2(0, 648, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_01xyg"]
atlas = ExtResource("3_8ln24")
region = Rect2(192, 648, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_764ux"]
atlas = ExtResource("3_8ln24")
region = Rect2(384, 648, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_wadof"]
atlas = ExtResource("3_8ln24")
region = Rect2(576, 648, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4jiv"]
atlas = ExtResource("3_8ln24")
region = Rect2(768, 648, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_68b7m"]
atlas = ExtResource("3_8ln24")
region = Rect2(960, 648, 192, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_vanrq"]
atlas = ExtResource("3_8ln24")
region = Rect2(1152, 648, 192, 108)

[sub_resource type="SpriteFrames" id="SpriteFrames_akqfu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqqt6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wu84c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ln24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtw2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oa1go")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbmy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jk1qb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dd4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgwnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_flqon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcqid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ajci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7b55j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pajh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7ex8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8gd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hstxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8egab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gw5y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svtp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dfpl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qywvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wgol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1acrt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vr8o3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1a85y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hl5e0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_engjn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6h3lr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dj67d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vcge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ip0br")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xyero")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcusk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4puye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q13xq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u43bj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvjdd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxnar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eku7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6nra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qw82i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1468l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_01xyg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_764ux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wadof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4jiv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68b7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vanrq")
}],
"loop": true,
"name": &"loop",
"speed": 10.0
}]

[node name="main menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_bqqt6")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1108.0
offset_bottom = 608.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1148, 648)
render_target_update_mode = 4

[node name="bgmenu" type="Node2D" parent="SubViewportContainer/SubViewport"]
script = ExtResource("2_wu84c")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="SubViewportContainer/SubViewport/bgmenu"]
texture_filter = 1
position = Vector2(570, 326)
scale = Vector2(5.9479165, 5.9814816)
sprite_frames = SubResource("SpriteFrames_akqfu")
animation = &"loop"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 75.0
offset_top = 280.0
offset_right = 309.0
offset_bottom = 771.0
theme_override_constants/separation = 1

[node name="Label" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "DEAD PIXEL!!!"
horizontal_alignment = 1

[node name="Play" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(64, 32)
layout_mode = 2
texture_normal = ExtResource("4_oa1go")
texture_pressed = ExtResource("4_oa1go")
texture_hover = ExtResource("5_flqon")

[node name="how to play" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_tbmy8")
texture_pressed = ExtResource("5_tbmy8")
texture_hover = ExtResource("7_rcqid")

[node name="scoreboard" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_jk1qb")
texture_pressed = ExtResource("6_jk1qb")
texture_hover = ExtResource("9_1ajci")

[node name="credits" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("7_5dd4i")
texture_pressed = ExtResource("7_5dd4i")
texture_hover = ExtResource("11_7b55j")

[node name="title placeholder" type="Sprite2D" parent="."]
position = Vector2(194.00002, 155.00002)
scale = Vector2(1.631111, 1.9823009)
texture = ExtResource("8_tbmy8")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 341)
zoom = Vector2(1.5, 1.6)

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/how to play" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="VBoxContainer/scoreboard" to="." method="_on_scoreboard_pressed"]
[connection signal="pressed" from="VBoxContainer/credits" to="." method="_on_credits_pressed"]
